# flash_cards_cli

./: .gitignore  Cargo.toml  quizlet.db
src/: db.rs  import.rs  learn.rs  main.rs  term.rs
