[package]
name = "quizlet_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1.44.2", features = ["full"] }
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.35", features = ["derive"] }
rand = "0.9"
termion = "4.0.5"
